{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 24,
  "lineage": "5d02fbf5-55bf-631c-f336-72f073c9ea78",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "aws_ecs_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Kan-Sym-WebApp-ELB/ee128d7ceef43491",
            "arn_suffix": "app/Kan-Sym-WebApp-ELB/ee128d7ceef43491",
            "dns_name": "internal-Kan-Sym-WebApp-ELB-2028723776.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Kan-Sym-WebApp-ELB/ee128d7ceef43491",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Kan-Sym-WebApp-ELB",
            "security_groups": [
              "sg-09a4c12052a8fa6c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045f15dc2d848718a"
              },
              {
                "subnet_id": "subnet-0c4816f7842153167"
              }
            ],
            "subnets": [
              "subnet-045f15dc2d848718a",
              "subnet-0c4816f7842153167"
            ],
            "vpc_id": "vpc-069d202f6c6abf29a",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Kan-Sym-WebApp-ELB/ee128d7ceef43491/561c6a694fd55b1c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-WebApp-target-group/b8fb9ce0f2553d2c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Kan-Sym-WebApp-ELB/ee128d7ceef43491/561c6a694fd55b1c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Kan-Sym-WebApp-ELB/ee128d7ceef43491",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_target_group.ecs-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "traceservice",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-WebApp-uat-traceservice/a48e0fc966842c68",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Kan-Sym-WebApp-ELB/ee128d7ceef43491/561c6a694fd55b1c/72dc5ae1a7e28918",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/traceservice*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/traceservice*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Kan-Sym-WebApp-ELB/ee128d7ceef43491/561c6a694fd55b1c/72dc5ae1a7e28918",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Kan-Sym-WebApp-ELB/ee128d7ceef43491/561c6a694fd55b1c",
            "priority": 100
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_alb_target_group.uat-traceservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-WebApp-target-group/b8fb9ce0f2553d2c",
            "arn_suffix": "targetgroup/Kan-Sym-WebApp-target-group/b8fb9ce0f2553d2c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-WebApp-target-group/b8fb9ce0f2553d2c",
            "lambda_multi_value_headers_enabled": false,
            "name": "Kan-Sym-WebApp-target-group",
            "port": 8001,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 300,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069d202f6c6abf29a"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "uat-traceservice",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-WebApp-uat-traceservice/a48e0fc966842c68",
            "arn_suffix": "targetgroup/Kan-Sym-WebApp-uat-traceservice/a48e0fc966842c68",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-WebApp-uat-traceservice/a48e0fc966842c68",
            "lambda_multi_value_headers_enabled": false,
            "name": "Kan-Sym-WebApp-uat-traceservice",
            "port": 8001,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 300,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069d202f6c6abf29a"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb"
          ]
        }
      ]
    }
  ]
}